--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 </head>
 
 <body>
-  <header class="hero text-white text-center vh-100">
+  <header class="hero text-white text-center vh-100" style="height: 100dvh;">
     <div class="container d-flex flex-column justify-content-center h-100 position-relative">
       <div class="row">
         <div class="col-12">
@@ -70,19 +70,27 @@
             <h3 class="text-primary text-uppercase fw-bold border-bottom border-info pb-2">About me</h3>
           </div>
         </div>
-        <p class="fw-semibold text-center fs-3">Let me introduce myself</p>
-        <div class="about-content row">
-          <div class="col-md-2">
-            <div class="img-container">
-              <img src="images/tailionel.jpg" alt="" class="img-fluid rounded-circle">
+        <div class="col-12">
+          <p class="fw-semibold text-center fs-3">Let me introduce myself</p>
+        </div>
+
+        <div class="col-12">
+          <div class="about-content row gy-4">
+            <div class="col-12 col-md-2 d-flex justify-content-center">
+              <div class="img-container">
+                <img src="images/tailionel.jpg" alt="" class="img-fluid rounded-circle">
+              </div>
             </div>
-          </div>
-          <div class="col-md-10">
-            <p>I am a fullstack web developer from Go Vap, HCM. I started writing code about 4 years ago. I started with
-              C
-              and then moved to web technologies like HTML, CSS, JavaScript and Nodejs. I am studying in IUH (Industrial
-              University of Ho Chi Minh City) as well as working as freelance. Even though I am just a fresher in web
-              development but I got tons of experience working freelance and with big projects from uni.</p>
+            <div class="col-md-10">
+              <p class="text-center text-md-start">I am a fullstack web developer from Go Vap, HCM. I started writing
+                code about 4 years ago. I started
+                with
+                C
+                and then moved to web technologies like HTML, CSS, JavaScript and Nodejs. I am studying in IUH
+                (Industrial
+                University of Ho Chi Minh City) as well as working as freelance. Even though I am just a fresher in web
+                development but I got tons of experience working freelance and with big projects from uni.</p>
+            </div>
           </div>
         </div>
       </div>
