--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 </head>
 
 <body>
-  <header class="hero text-white text-center vh-100" style="height: 100dvh;">
+  <header class="hero text-white text-center vh-100">
     <div class="container d-flex flex-column justify-content-center h-100 position-relative">
       <div class="row">
         <div class="col-12">
@@ -213,7 +213,7 @@
         </div>
       </div>
       <div class="row mt-7">
-        <div class="d-flex justify-content-center gap-5">
+        <div class="d-flex justify-content-center gap-2 gap-md-5">
           <button class="btn btn-outline-dark text-uppercase px-4 rounded-0 py-2">Hire me now</button>
           <button class="btn btn-dark text-uppercase px-4 rounded-0 py-2">Download CV</button>
         </div>
@@ -412,7 +412,7 @@
     <div class="container">
       <div class="row">
         <div class="col-md-6">
-          <p>Copyright &copy; 2023 | Design By StyleShout</p>
+          <p class="text-center text-md-start">Copyright &copy; 2023 | Design By StyleShout</p>
         </div>
         <div class="col-md-6">
           <div class="d-flex justify-content-center justify-content-md-end gap-2 gap-md-3">
