--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           <p class="text-uppercase text-primary fw-semibold">Hello, World</p>
         </div>
         <div class="col-12">
-          <h1 id="typing-name" class="display-3 fw-bold"></h1>
+          <h1 id="typing-name" class="display-1 fw-bold mb-2"></h1>
         </div>
         <div class="col-12">
           <p class="text-center text-uppercase">Full Stack Developer | IUH Student</p>
