--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
       </div>
     </div>
   </section>
-  <!--  Proejects -->
+  <!--  Projects -->
   <section class="py-7 bg-secondary">
     <div class="container">
       <div class="row mb-4">
@@ -239,32 +239,38 @@
       <div class="row g-3">
         <div class="col-md-6">
           <div class="img-container">
-            <img src="images/project1.jpg" alt="" class="img-fluid rounded-4 shadow-lg">
+            <a href="images/project1.jpg" data-lightbox="images"><img src="images/project1.jpg" alt=""
+                class="img-fluid rounded-4 shadow-lg"></a>
           </div>
         </div>
         <div class="col-md-6">
           <div class="img-container">
-            <img src="images/project2.jpg" alt="" class="img-fluid rounded-3 shadow-lg">
+            <a href="images/project2.jpg" data-lightbox="images"><img src="images/project2.jpg" alt=""
+                class="img-fluid rounded-3 shadow-lg"></a>
           </div>
         </div>
         <div class="col-md-6">
           <div class="img-container">
-            <img src="images/project3.jpg" alt="" class="img-fluid rounded-3 shadow-lg">
+            <a href="images/project3.jpg" data-lightbox="images"><img src="images/project3.jpg" alt=""
+                class="img-fluid rounded-3 shadow-lg"></a>
           </div>
         </div>
         <div class="col-md-6">
           <div class="img-container">
-            <img src="images/project4.jpg" alt="" class="img-fluid rounded-3 shadow-lg">
+            <a href="images/project4.jpg" data-lightbox="images"><img src="images/project4.jpg" alt=""
+                class="img-fluid rounded-3 shadow-lg"></a>
           </div>
         </div>
         <div class="col-md-6">
           <div class="img-container">
-            <img src="images/project5.jpg" alt="" class="img-fluid rounded-3 shadow-lg">
+            <a href="images/project5.jpg" data-lightbox="images"><img src="images/project5.jpg" alt=""
+                class="img-fluid rounded-3 shadow-lg"></a>
           </div>
         </div>
         <div class="col-md-6">
           <div class="img-container">
-            <img src="images/project6.jpg" alt="" class="img-fluid rounded-3 shadow-lg">
+            <a href="images/project6.jpg" data-lightbox="images"><img src="images/project6.jpg" alt=""
+                class="img-fluid rounded-3 shadow-lg"></a>
           </div>
         </div>
       </div>
